tests/test_exception/bad/output/missing_unlabeled_definition.catala_en.A.Interpret
[ERROR] This exception does not have a corresponding definition

 --> tests/test_exception/bad/missing_unlabeled_definition.catala_en
  | 
7 | scope A:
  |        
8 |   exception
  |   ^^^^^^^^^
9 |   definition x equals 1
  |   ^^^^^^^^^^^^^^^^^^^^^^
  + Test
